[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/game_screen_text.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/dogicapixelbold.otf"

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_bottom = 15
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="GameScreenText" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.529412, 0.682353, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderText" type="RichTextLabel" parent="ColorRect/VBoxContainer"]
margin_left = 290.0
margin_right = 890.0
margin_bottom = 226.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 7
size_flags_stretch_ratio = 0.36
theme = SubResource( 3 )
text = "Welcome to the Land

    of Make Believe"
fit_content_height = true

[node name="BodyText" type="RichTextLabel" parent="ColorRect/VBoxContainer"]
margin_left = 290.0
margin_top = 230.0
margin_right = 890.0
margin_bottom = 860.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 7
theme = SubResource( 3 )
text = "As Mr. Rogers, you need to help your neighbors find their house before the trolley leaves you in the land of make-believe. 

Good luck neighbor!"
fit_content_height = true

[node name="TextTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
